src/test/resources/30/single/xhtml/valid/issue355.xhtml
<html xmlns="http://www.w3.org/1999/xhtml">
  <head>
    <title>HTML5 ID</title>
  </head>
  <body>
    <div id=",!@"></div>
   </body>
</html>