src/test/resources/30/single/xhtml/invalid/duplicate-id.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
    <head>
        <title>duplicate ID</title>
    </head>
	<body>
		<p id="p1">p1</p>
		<p id="p1">p2</p>
	</body>
</html>
